[gd_scene load_steps=4 format=3 uid="uid://cj88bg8834rmt"]

[ext_resource type="Script" uid="uid://bc5lk4pawxgc4" path="res://Scripts/station_script.gd" id="1_xqm5m"]
[ext_resource type="Texture2D" uid="uid://btniax21u00s0" path="res://Assets/Rescue Station/rescue_default.png" id="2_pie1o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xqm5m"]
radius = 80.0

[node name="Station" type="Node2D"]
script = ExtResource("1_xqm5m")
cost = 40
radius = 80.0
rect = Rect2(0, 0, 80, 80)

[node name="Radius" type="Area2D" parent="."]
visible = false
texture_filter = 1

[node name="RadiusSize" type="CollisionShape2D" parent="Radius"]
shape = SubResource("CircleShape2D_xqm5m")

[node name="Plot" type="Button" parent="."]
visible = false
texture_filter = 1
offset_left = -25.0
offset_right = 24.0
offset_bottom = 31.0
text = "0 : 40"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_pie1o")

[node name="StationNumber" type="TextEdit" parent="."]
visible = false
offset_left = -13.5
offset_top = -20.0
offset_right = 13.5
offset_bottom = 15.0
text = "00"
editable = false

[connection signal="area_shape_entered" from="Radius" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Radius" to="." method="_on_area_2d_body_entered"]
[connection signal="body_shape_entered" from="Radius" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="button_up" from="Plot" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Plot" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Plot" to="." method="_on_button_mouse_exited"]
